--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Build
         run: |
           npm install
-          npm run-script build
+          npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.2.4
