--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,6 @@ jobs:
         run: |
           npm install
           npm run build
+
+      - name: GitHub Pages Deploy
+        uses: maxheld83/ghpages@v0.2.1
