--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
       - name: GitHub Pages Deploy
         uses: maxheld83/ghpages@v0.2.1
         with:
-          env: BUILD_DIR = "dist/"
+          env: BUILD_DIR = 'dist/'
           secrets: "01f8892576969d39f365cba4e8bf61b44dd45ea8"
