--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,11 @@ jobs:
           npm install
           npm run build
 
-      - name: GitHub Pages Deploy
-        uses: maxheld83/ghpages@v0.2.1
+      - name: Deploy
+        if: success()
+        uses: crazy-max/ghaction-github-pages@v1
         with:
-          env: BUILD_DIR = 'dist/'
-          secrets: "01f8892576969d39f365cba4e8bf61b44dd45ea8"
+          target_branch: gh-pages
+          build_dir: dist
+        env:
+          GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
