--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
         if: success()
         uses: crazy-max/ghaction-github-pages@v1
         with:
+          repo: master
           target_branch: gh-pages
           build_dir: dist
         env:
